Add Docker memory limits transparency for JVM case